[package]
name = "nutrimatic"
version = "0.1.1"
authors = ["dzhu"]
edition = "2018"
description = "Tools for reading Nutrimatic (https://nutrimatic.org) index files"
readme = "README.md"
repository = "https://github.com/dzhu/nutrimatic-rs"
license = "MIT OR Apache-2.0"
keywords = ["language", "trie"]
categories = ["text-processing"]
include = ["**/*.rs", "README.md"]

[dependencies]
byteorder = "1"
